<resources>
    <string name="app_name">TeamChatBuddy</string>
    <string name="path">/storage/emulated/0/</string>
    <string name="pathConfig">/storage/emulated/0/TeamChatBuddy/</string>
    <string name="copyright">[Ver. 2.2.39] 2025©Teamnet - info@teamnet.fr</string>
    <string name="version_app">Ver. 2.2.39</string>
    <string name="menu_title_fr">PARAMETRES</string>
    <string name="menu_option_listening_duration_fr">Durée d\'écoute en secondes</string>
    <string name="menu_option_listening_duration_hint_fr">Saisissez la durée (s) …</string>
    <string name="menu_option_listening_attempt_fr">Nombre d\'écoutes</string>
    <string name="menu_option_listening_attempt_hint_fr">Saisissez le nombre d\'écoutes …</string>
    <string name="menu_option_speed_fr">Vitesse de la parole</string>
    <string name="menu_option_volume_fr">Volume de la parole</string>
    <string name="menu_option_affichage_fr">Affichage des paroles</string>
    <string name="menu_option_emotion_fr">Activation des émotions</string>
    <string name="menu_option_detectionLanguage_fr">Activation de la détection de langue</string>
    <string name="menu_option_mode_stream_fr">Mode Stream</string>
    <string name="menu_option_commande_fr">Activation des commandes</string>
    <string name="menu_option_langue_fr">Langue</string>
    <string name="menu_option_stt_fr">Choix du STT</string>
    <string name="menu_option_chatbot_fr">Choix du ChatBot</string>
    <string name="menu_header_fr">En-tête</string>
    <string name="menu_api_key_fr">Clé ChatBot</string>
    <string name="menu_option_projectID_fr">L\'identifiant du projet de CustomGPT</string>
    <string name="menu_option_projectID_hint_fr">Saisissez l\'ID du projet</string>
    <string name="destination_mail_texte_fr">e-mail du destinataire</string>
    <string name="destination_mail_Edittexte_fr">Saisissez l\'e-mail</string>
    <string name="menu_option_BI_fr">Stimulis</string>
    <string name="menu_option_tracking_activation_fr">Activation du suivi</string>
    <string name="menu_option_tracking_camera_display_fr">Affichage de la caméra</string>
    <string name="menu_option_tracking_head_fr">Activer la tête</string>
    <string name="menu_option_tracking_body_fr">Activer le corps</string>
    <string name="menu_option_tracking_auto_listen_fr">Activer l\'écoute automatique</string>
    <string name="menu_option_tracking_invitation_fr">Invitation</string>
    <string name="menu_option_tracking_invitation_chatGpt_fr">Invitation ChatGPT</string>
    <string name="menu_option_tracking_timeout_fr">Activation du délai de suivi</string>
    <string name="menu_dialog_supported_languages_Android_STT_fr">Langues prises en charge</string>
    <string name="tracking_delay_fr">Délai de suivi</string>
    <string name="menu_title_en">SETTINGS</string>
    <string name="menu_option_listening_duration_en">Listening time in seconds</string>
    <string name="menu_option_listening_duration_hint_en">Enter the duration (s) …</string>
    <string name="menu_option_listening_attempt_en">Number of listens</string>
    <string name="menu_option_listening_attempt_hint_en">Enter the number of listens …</string>
    <string name="menu_option_speed_en">Speech speed</string>
    <string name="menu_option_volume_en">Speech volume</string>
    <string name="menu_option_affichage_en">Show Q/A</string>
    <string name="menu_option_emotion_en">Activation of emotions</string>
    <string name="menu_option_detectionLanguage_en">Enable language detection</string>
    <string name="menu_option_mode_stream_en">Stream Mode</string>
    <string name="menu_option_commande_en">Enable commands</string>
    <string name="menu_option_langue_en">Language</string>
    <string name="menu_option_stt_en">Choice of STT</string>
    <string name="menu_option_chatbot_en">ChatBot selection</string>
    <string name="menu_header_en">Header</string>
    <string name="menu_api_key_en">ChatBot key</string>
    <string name="menu_option_projectID_en">CustomGPT project ID</string>
    <string name="menu_option_projectID_hint_en">Enter the project ID</string>
    <string name="destination_mail_texte">Recipient\'s Email</string>
    <string name="destination_mail_Edittexte">Enter the Email</string>
    <string name="menu_option_BI_en">Stimulis</string>
    <string name="menu_option_tracking_activation_en">Enable tracking</string>
    <string name="menu_option_tracking_camera_display_en">Camera display</string>
    <string name="menu_option_tracking_head_en">Enable head</string>
    <string name="menu_option_tracking_body_en">Enable body</string>
    <string name="menu_option_tracking_auto_listen_en">Enable automatic listening</string>
    <string name="menu_option_tracking_invitation_en">Invitation</string>
    <string name="menu_option_tracking_invitation_chatGpt_en">ChatGPT invitation</string>
    <string name="menu_option_tracking_timeout_en">Enabling timeout tracking</string>
    <string name="menu_dialog_supported_languages_Android_STT_en">Supported Languages</string>
    <string name="tracking_delay_en">Tracking Delay</string>
    <string name="menu_title_es">AJUSTES</string>
    <string name="menu_option_listening_duration_es">Tiempo de escucha en segundos</string>
    <string name="menu_option_listening_duration_hint_es">Introduzca la duración (s) ...</string>
    <string name="menu_option_listening_attempt_es">Número de escuchas</string>
    <string name="menu_option_listening_attempt_hint_es">Introduzca el número de escuchas ...</string>
    <string name="menu_option_speed_es">Velocidad del habla</string>
    <string name="menu_option_volume_es">Volumen de voz</string>
    <string name="menu_option_affichage_es">Mostrar P/R</string>
    <string name="menu_option_emotion_es">Activación de las emociones</string>
    <string name="menu_option_detectionLanguage_es">Activar la detección de idiomas</string>
    <string name="menu_option_mode_stream_es">Modo de transmisión</string>
    <string name="menu_option_commande_es">Habilitar comandos</string>
    <string name="menu_option_langue_es">Idioma</string>
    <string name="menu_option_stt_es">Elección de STT</string>
    <string name="menu_option_chatbot_es">Selección de ChatBot</string>
    <string name="menu_header_es">Cabecera</string>
    <string name="menu_api_key_es">Clave ChatBot</string>
    <string name="menu_option_projectID_es">Identificador del proyecto CustomGPT</string>
    <string name="menu_option_projectID_hint_es">Introduzca el ID del proyecto</string>
    <string name="menu_option_tracking_activation_es">Activar el seguimiento</string>
    <string name="menu_option_tracking_camera_display_es">Pantalla de la cámara</string>
    <string name="menu_option_tracking_head_es">Habilitar cabezal</string>
    <string name="menu_option_tracking_body_es">Habilitar cuerpo</string>
    <string name="menu_option_tracking_auto_listen_es">Activar la escucha automática</string>
    <string name="menu_option_tracking_invitation_es">Invitación</string>
    <string name="menu_option_tracking_invitation_chatGpt_es">Invitación ChatGPT</string>
    <string name="menu_option_tracking_timeout_es">Habilitar el seguimiento del tiempo de espera</string>
    <string name="menu_dialog_supported_languages_Android_STT_es">Idiomas admitidos</string>
    <string name="tracking_delay_es">Retraso de seguimiento</string>
    <string name="menu_title_de">EINSTELLUNGEN</string>
    <string name="menu_option_listening_duration_de">Anhörungszeit in Sekunden</string>
    <string name="menu_option_listening_duration_hint_de">Geben Sie die Dauer (s) ein ...</string>
    <string name="menu_option_listening_attempt_de">Anzahl der Anhörungen</string>
    <string name="menu_option_listening_attempt_hint_de">Geben Sie die Anzahl der Anhörungen ein ...</string>
    <string name="menu_option_speed_de">Sprachtempo</string>
    <string name="menu_option_volume_de">Lautstärke der Sprache</string>
    <string name="menu_option_affichage_de">F/A anzeigen</string>
    <string name="menu_option_emotion_de">Aktivierung von Emotionen</string>
    <string name="menu_option_detectionLanguage_de">Aktivieren Sie die Spracherkennung</string>
    <string name="menu_option_mode_stream_de">Stream-Modus</string>
    <string name="menu_option_commande_de">Befehle aktivieren</string>
    <string name="menu_option_langue_de">Sprache</string>
    <string name="menu_option_stt_de">STT-Wahl</string>
    <string name="menu_option_chatbot_de">Wahl des ChatBots</string>
    <string name="menu_header_de">Kopfzeile</string>
    <string name="menu_api_key_de">ChatBot-Schlüssel</string>
    <string name="menu_option_projectID_de">Die Projekt-ID von CustomGPT</string>
    <string name="menu_option_projectID_hint_de">Geben Sie die Projekt-ID ein</string>
    <string name="menu_option_tracking_activation_de">Tracking aktivieren</string>
    <string name="menu_option_tracking_camera_display_de">Anzeige der Kamera</string>
    <string name="menu_option_tracking_head_de">Kopf Aktivieren</string>
    <string name="menu_option_tracking_body_de">Körper Aktivieren</string>
    <string name="menu_option_tracking_auto_listen_de">Automatisches Mithören aktivieren</string>
    <string name="menu_option_tracking_invitation_de">Einladung</string>
    <string name="menu_option_tracking_invitation_chatGpt_de">ChatGPT-Einladung</string>
    <string name="menu_option_tracking_timeout_de">Aktivieren der Timeout-Verfolgung</string>
    <string name="menu_dialog_supported_languages_Android_STT_de">Unterstützte Sprachen</string>
    <string name="tracking_delay_de">Verfolgungsverzögerung</string>
    <string name="chatBotNoFound_fr">Impossible de trouver votre chatbot</string>
    <string name="chatBot_ERROR_fr">Une erreur est survenue</string>
    <string name="chatBotNoResponse_fr">Je ne sais pas répondre à cette question</string>
    <string name="ExceptionTraduction_fr">Exception lors de la récupération de la traduction</string>
    <string name="chatBotServerNoResponce_fr">aucune réponse du serveur</string>
    <string name="send_mail_toast_fr">Le mail est envoyé!</string>
    <string name="error_TTS_fr">La fonction de synthèse vocale n\'est pas disponible actuellement.</string>
    <string name="add_mail_toast_fr">Veuillez ajouter l\'adresse e-mail de destination dans le fichier TeamChatBuddy.properties.</string>
    <string name="error_mail_toast_fr">Échec de l\'authentification : Données d\'authentification incorrectes.</string>
    <string name="mlkit_model_is_downloading_fr">Le téléchargement du modèle linguistique de ML Kit est en cours. Merci de patienter.</string>
    <string name="toast_message_error_downloading_fr">Le téléchargement a échoué, nous remettrons l\'ancienne langue</string>
    <string name="chatBotNoFound_en">Unable to find your chatbot</string>
    <string name="chatBot_ERROR_en">An error has occurred</string>
    <string name="chatBotNoResponse_en">I don\'t know how to answer this question</string>
    <string name="ExceptionTraduction_en">Exception while retrieving translation</string>
    <string name="chatBotServerNoResponce_en">No response from chatbot server</string>
    <string name="send_mail_toast_en">The mail is sent!</string>
    <string name="error_TTS_en">The text-to-speech function is not available at the moment.</string>
    <string name="add_mail_toast_en">Please add the destination email to the TeamChatBuddy.properties file.</string>
    <string name="consommation_title_fr">Consommation OpenAI</string>
    <string name="consommation_title_2_fr">Consommation d\'openAI en $</string>
    <string name="model_fr">Modèle</string>
    <string name="input_fr">Entrée</string>
    <string name="output_fr">Sortie</string>
    <string name="other_models_fr">Autres modèles</string>
    <string name="section_empty_fr">Cette section est actuellement vide.</string>
    <string name="number_of_tokens_fr">Nombre de tokens</string>
</resources>